@@ -9,7 +9,7 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 2720</build>
+	<build>Build 2725</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
 	<release_date>27.03.2007 - 20:10</release_date>
