@@ -70,7 +70,7 @@ Developer Version
 	- 1.5.3 Stable
 	- 1.5.4 Stable
 
-Building Steps: 2720
+Building Steps: 2725
 
 
 
@@ -84,8 +84,11 @@ Building Steps: 2720
  - bug fixed: tree view for the webpage tree (backend)
  - bug fixed: the language selector selects not the lcorrect language in the sidemenu editor
  - bug fixed: all documents in the document list have the lang variable
+ - bug fixed: 
 
  - changed: impressum (publishing form) and memberlist now with the html title formater
+ - changed: language changer now with the component item in the link
+ - changed: 
 
  - added: 
 
